# zephyr-iolm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  demo_build.yml  samples_build.yml
dts/bindings/iolm/: iol,maxim14819.yaml  maxim14819.h
include/iolm/: iolm.h  transciever.h  utils.h  zephyr.h
samples/buzzer/: CMakeLists.txt
samples/demo/: README.md  prj.conf
samples/demo/boards/: esp32_devkitc_wrover_procpu.overlay  nrf52833dk_nrf52833.overlay
samples/demo/src/: demo.c  iolink_handler.c  iolink_handler.h  iolink_smi.c  iolink_smi.h
samples/ifm_sample_app/: CMakeLists.txt  README.md  prj.conf
samples/ifm_sample_app/boards/: esp32_devkitc_wrover_procpu.overlay  native_posix_64.conf  nrf52833dk_nrf52833.overlay  stm32h747i_disco_stm32h747xx_m7.overlay
samples/ifm_sample_app/build_esp/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
samples/ifm_sample_app/build_nrf/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
samples/ifm_sample_app/src/: iol_master_sample_app.c  iolink_handler.c  iolink_handler.h  iolink_ifm.c  iolink_ifm.h  iolink_smi.c  (+1 more)
samples/read_pd/: CMakeLists.txt  Kconfig  README.md
src/: iolink_options.h  iolm.c  options.h  transciever.c  utils.c
src/iol_osal/: osal_irq.c  osal_spi.c
src/osal/: osal.c  osal.h  osal_log.c  osal_log.h
zephyr/: KConfig  module.yaml
(+317 files in other folders)
